# youtube-captions-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/youtube_captions_mcp/: __init__.py  __main__.py  server.py  transcripts.py
src/youtube_context_mcp/: __init__.py  __main__.py  links.py  media.py  metadata.py  proxies.py  server.py  transcripts.py
src/yt_transcript_mcp/: __init__.py  __main__.py  proxies.py  server.py  transcripts.py
tests/: conftest.py  test_links.py  test_media.py  test_metadata.py  test_proxies.py  test_server.py  test_transcripts.py  test_url_parsing.py
