[project]
name = "youtube-captions-mcp"
version = "0.1.0"
description = "A small MCP server for fetching YouTube video transcripts, wrapping youtube-transcript-api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12",
    "youtube-transcript-api>=1.2.4,<2",
    "requests>=2.32",
]
authors = [{name = "Onur Cetinkol", email = "onurcetinkol@gmail.com"}]
license = {text = "MIT"}
keywords = ["youtube", "transcript", "mcp", "model-context-protocol", "subtitles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/realiti4/youtube-captions-mcp"
Repository = "https://github.com/realiti4/youtube-captions-mcp"
Issues = "https://github.com/realiti4/youtube-captions-mcp/issues"

[project.scripts]
youtube-captions-mcp = "youtube_captions_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_captions_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mcp[cli]>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
